few changes, try to add some test