@@ -29,19 +29,19 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>RELEASE</version>
+			<version>2.1.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-			<version>RELEASE</version>
+			<version>2.1.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>RELEASE</version>
+			<version>5.1.4.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -135,6 +135,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
 				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
